# FedEx-STABLE

./: .checkov.yaml  Cargo.toml  README.md  debug_gen.py  docker-compose.yml  generate_pure.py  index.html  package-lock.json  restart_backend.sh  setup_and_run_service.sh  setup_and_train.sh  start_infra.sh  tailwind.config.ts  test_injector.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container-security.yml  dast.yml  deploy.yml  scorecard.yml  security-scanning.yml  update-lockfile.yml
.zap/: rules.tsv
backend/crates/: Cargo.toml  Dockerfile
backend/crates/admin/: Cargo.toml
backend/crates/admin/src/: main.rs
backend/crates/assignment/: Cargo.toml  build.rs
backend/crates/assignment/src/: main.rs
backend/crates/gateway/: Cargo.toml
backend/crates/gateway/src/: main.rs
backend/crates/ingress/: Cargo.toml
backend/crates/ingress/src/: main.rs
backend/crates/lifecycle/: Cargo.toml  build.rs
backend/crates/lifecycle/src/: lib.rs  main.rs
backend/crates/projection/: Cargo.toml
backend/crates/projection/migrations/: 20240101000000_initial_schema.sql
backend/crates/projection/src/: main.rs
backend/crates/regulator/: Cargo.toml  build.rs
backend/crates/regulator/src/: main.rs
backend/python/: Dockerfile
backend/python/estimation/: events_pb2.py  generate_data.py  main.py  model.py  recovery_model.pth  requirements.txt  scaler.pkl  synthetic_data.csv  train.py
backend/python/scripts/: ingest_data.py
docs/: SECURITY_CONFIGURATION.md
frontend/: Dockerfile  index.html  lint_errors.txt  lint_results.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  ConsoleApp.tsx  api.ts
frontend/src/components/: ConsoleSession.tsx  DcaAnalyticsModals.tsx  DcaPortal.tsx
frontend/src/components/console/: FullscreenChartModal.tsx  GovernanceControls.tsx  SystemBehavior.tsx
frontend/src/components/console/charts/: AgencyTimeSlicePanel.tsx  AnnotationPanel.tsx  CorrelationMatrixPanel.tsx  DCABehaviorHeatmap.tsx  DrilldownModal.tsx  FullscreenHeatmapModal.tsx  FullscreenRecoveryVarianceModal.tsx  GlobalCaseList.tsx  HeatmapTimeline.tsx  MACDPanel.tsx  PortfolioFlowChart.tsx  RecoveryPerformanceChart.tsx  RecoveryVarianceChart.tsx  ScatterPlotChart.tsx  StackedAreaChart.tsx  ThresholdAlerts.tsx  WaterfallChart.tsx
frontend/src/components/ui/: TabContextMenu.tsx  input.tsx  switch.tsx
frontend/src/stores/: annotationStore.tsx  annotationTypes.ts
frontend/src/utils/: chartAnalytics.ts
infra/k8s/: backend-deployment.yaml  frontend-deployment.yaml  infrastructure.yaml  ingress.yaml  namespace.yaml  network-policy.yaml
infra/terraform/aws/: main.tf  outputs.tf  variables.tf
schemas/: events.proto
src/: index.css
src/components/console/: GlobalControlBar.tsx  GovernanceControls.tsx  GovernanceStatusStrip.tsx  ModeToggle.tsx  StabilityGauge.tsx  SystemBehavior.tsx
src/components/console/charts/: DCABehaviorHeatmap.tsx  PortfolioFlowChart.tsx  RecoveryVarianceChart.tsx
src/components/ui/: slider.tsx
src/pages/: Index.tsx
