[package]
name = "stable-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
prost = "0.12"
prost-types = "0.12"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[build-dependencies]
prost-build = "0.12"
