[package]
name = "stable-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
rdkafka = { version = "0.39", features = ["cmake-build"] }
prost = "0.14"
prost-types = "0.14"
uuid = { version = "1.20", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rand = "0.9"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.14"
