[package]
name = "stable-lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
rdkafka = { version = "0.38", features = ["cmake-build"] }
prost = "0.14"
prost-types = "0.14"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
thiserror = "2.0"
thiserror = "1.0"
serde = "1.0"

[build-dependencies]
prost-build = "0.14"
