[package]
name = "stable-projection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
rdkafka = { version = "0.38", features = ["cmake-build"] }
prost = "0.14"
prost-types = "0.14"
uuid = "1.6"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures = "0.3"

[build-dependencies]
prost-build = "0.14"
