[package]
name = "stable-regulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
prost = "0.12"
prost-types = "0.12"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Shared logic from other crates if needed, but keeping it decoupled for now

[build-dependencies]
prost-build = "0.12"
