[package]
name = "stable-regulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
rdkafka = { version = "0.39", features = ["cmake-build"] }
prost = "0.14"
prost-types = "0.14"
uuid = { version = "1.20", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Shared logic from other crates if needed, but keeping it decoupled for now

[build-dependencies]
prost-build = "0.14"
